Bug 388669 - Application menu closes unexpected
Summary: Application menu closes unexpected
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Menu (Kicker) widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-08 09:34 UTC by bug2017
Modified: 2018-01-22 10:34 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
menu.mkv (736.13 KB, video/x-matroska)
2018-01-08 18:38 UTC, bug2017
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bug2017 2018-01-08 09:34:44 UTC
As soon the mouse was moved over an "More applications" item, moving it back to any item above this one closes the menu. Moving from the new submenu back to the menu has the same behavior.
Comment 1 Eike Hein 2018-01-08 11:39:46 UTC
Could you add a video? (e.g. using vokoscreen)
Comment 2 bug2017 2018-01-08 18:38:02 UTC
Created attachment 109739 [details]
menu.mkv

Part of the screen with the application menu. The menu closes at while mouse pointer moves up.
Comment 3 Christoph Feck 2018-01-10 21:32:04 UTC
Confirmed here, using Qt 5.10. It might be the Qt update that changed it, but I also update Plasma from master frequently.
Comment 4 bug2017 2018-01-11 00:52:01 UTC
I'm using Qt 5.10 too. Maybe someone has to test with an older version
Comment 5 bug2017 2018-01-16 20:24:32 UTC
I've updated to plasma-5.11.95. (Still Qt-5.10 but patched qtwayland against #381630 )
The issue can not be reproduced with wayland, but is still present in X11. 

If an new application window opens and the application menu is open (i.E. to launch a second application) it closes too.

Probably the menu closes if the focus gets stolen.

The behavior I would expect: The menu stays open and keeps the focus until the user clicks on something inside the menu or outside to close it.
Comment 6 Eike Hein 2018-01-17 08:23:11 UTC
Thanks for all the info. My distro doesn't have this kind of menu structure, which is why I may not have noticed this bug so far. I'll look into reproducing and fixing this soon.
Comment 7 Eike Hein 2018-01-17 13:57:52 UTC
Reproduced.
Comment 8 Eike Hein 2018-01-17 14:45:23 UTC
Patch under review: https://phabricator.kde.org/D9945
Comment 9 Eike Hein 2018-01-22 10:34:44 UTC
Git commit fc155e94457d5767100bb108e39355094a373424 by Eike Hein.
Committed on 22/01/2018 at 10:34.
Pushed by hein into branch 'Plasma/5.12'.

Don't close plasmoid when closing a subdialog

Summary:
This patch redoes the fencing mechanism around
plasmoid.hideOnWindowDeactivate for window focus
handovers to be more reliable and generic. It's now
always disabled when a dialog is about to be
destroyed, and renabled on focus-in or when exiting
the root list. The dialog code is also fixed not
to close the plasmoid when it knows it's window
deactivation is part of its own destruction.

WindowSystem::monitorWindowFocus is also changed
to work in a single-shot sort of way, removing
the event filter again once it caught an event.

Fixes a refactoring regression from 84f1cb1c1.

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D9945

M  +9    -3    applets/kicker/package/contents/ui/ItemListDialog.qml
M  +3    -8    applets/kicker/package/contents/ui/ItemListView.qml
M  +2    -1    applets/kicker/package/contents/ui/main.qml
M  +3    -2    applets/kicker/plugin/windowsystem.cpp
M  +1    -1    applets/kicker/plugin/windowsystem.h

https://commits.kde.org/plasma-desktop/fc155e94457d5767100bb108e39355094a373424